Added properties for sonar. corrected docker image

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
 - make all
 - docker build -t jaedle:snapcontrol-backend:latest .
 - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-- docker push jaedle:snapcontrol-backend:latest
+- docker push jaedle/snapcontrol-backend:latest
 - sonar-scanner -Dsonar.login="$SONAR_TOKEN"
 env:
   global:
