--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,4 +4,5 @@ sonar.projectKey=snapcontrol-backend
 sonar.projectName=snapcontrol-backend
 sonar.host.url=https://sonarcloud.io
 sonar.sources=.
+sonar.exclusions=*_test.go
 
