--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,4 +5,6 @@ sonar.projectName=snapcontrol-backend
 sonar.host.url=https://sonarcloud.io
 sonar.sources=.
 sonar.exclusions=*_test.go
+sonar.tests=.
+sonar.test.inclusions=*_test.go
 
