--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,4 +7,4 @@ sonar.sources=.
 sonar.exclusions=*_test.go
 sonar.tests=.
 sonar.test.inclusions=*_test.go
-
+sonar.go.coverage.reportPaths=coverage/coverage.out
